replaced hbox with anchorpane

--- a/src/main/resources/com/example/videocutapp/main-view.fxml
+++ b/src/main/resources/com/example/videocutapp/main-view.fxml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.media.*?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.videocutapp.MainController">
     <children>
-      <HBox alignment="TOP_CENTER" spacing="16.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0">
          <children>
-                <MediaView fx:id="mediaView" fitHeight="270.0" fitWidth="480.0">
-               <HBox.margin>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </HBox.margin></MediaView>
-            <VBox alignment="TOP_RIGHT" spacing="8.0">
+                <MediaView fx:id="mediaView" fitHeight="270.0" fitWidth="480.0" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
+            <VBox alignment="TOP_RIGHT" spacing="8.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0">
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="8.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#onChooseDirectoryBtnClick" prefWidth="145.0" text="Choose Directory" />
-                        <Label fx:id="openDirectoryLabel" minWidth="150.0" prefHeight="17.0" style="-fx-border-color: black;" />
+                        <Label fx:id="openDirectoryLabel" minWidth="400.0" prefHeight="17.0" style="-fx-border-color: black;" />
                      </children>
                   </HBox>
                   <VBox alignment="CENTER_LEFT">
@@ -28,11 +24,7 @@
                      </children>
                   </VBox>
                </children>
-               <HBox.margin>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </HBox.margin>
             </VBox>
-         </children>
-      </HBox>
+         </children></AnchorPane>
     </children>
 </AnchorPane>
