--- a/src/main/resources/com/example/videocutapp/main-view.fxml
+++ b/src/main/resources/com/example/videocutapp/main-view.fxml
@@ -13,7 +13,7 @@
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="8.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#onChooseDirectoryBtnClick" prefWidth="145.0" text="Choose Directory" />
+                        <Button focusTraversable="false" mnemonicParsing="false" onAction="#onChooseDirectoryBtnClick" prefWidth="145.0" text="Choose Directory" />
                         <Label fx:id="openDirectoryLabel" minWidth="400.0" prefHeight="17.0" style="-fx-border-color: black;" />
                      </children>
                   </HBox>
