--- a/src/main/resources/com/example/videocutapp/main-view.fxml
+++ b/src/main/resources/com/example/videocutapp/main-view.fxml
@@ -9,7 +9,7 @@
       <VBox alignment="TOP_CENTER" layoutX="84.0" layoutY="-17.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0">
          <children>
                 <MediaView fx:id="mediaView" fitHeight="270.0" fitWidth="480.0" />
-            <Slider fx:id="mediaProgressSlider" />
+            <Slider fx:id="mediaProgressSlider" focusTraversable="false" />
             <Label fx:id="mediaLabel" />
          </children>
       </VBox>
