--- a/src/main/resources/com/example/videocutapp/main-view.fxml
+++ b/src/main/resources/com/example/videocutapp/main-view.fxml
@@ -7,13 +7,25 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.videocutapp.MainController">
     <children>
-      <VBox alignment="TOP_CENTER" layoutX="84.0" layoutY="-17.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0">
-         <children>
-                <MediaView fx:id="mediaView" fitHeight="270.0" fitWidth="480.0" />
-            <Slider fx:id="mediaProgressSlider" focusTraversable="false" />
-            <Label fx:id="mediaLabel" />
-         </children>
-      </VBox>
+      <BorderPane prefHeight="473.0" prefWidth="636.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="16.0">
+         <bottom>
+            <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" spacing="4.0" style="-fx-background-color: #EEEEEE;" BorderPane.alignment="CENTER">
+               <children>
+                  <Slider fx:id="mediaProgressSlider" focusTraversable="false" max="1.0" />
+                  <Label fx:id="mediaLabel" focusTraversable="false" text="0:00:00 / 0:00:00" />
+               </children>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <BorderPane.margin>
+                  <Insets bottom="8.0" />
+               </BorderPane.margin>
+            </VBox>
+         </bottom>
+         <center>
+                <MediaView fx:id="mediaView" fitHeight="270.0" fitWidth="480.0" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
       <VBox alignment="TOP_RIGHT" spacing="8.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="16.0">
          <children>
             <HBox alignment="CENTER_LEFT" spacing="8.0">
